<resources>
    <string name="app_name" translatable="false">WeatherForecastApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="alert">Alerts</string>
    <string name="settings">Settings</string>
    <string name="temp">Temperature</string>
    <string name="location">Location</string>
    <string name="wind">Wind</string>
    <string name="language">Language</string>
    <string name="notification">Notifications</string>
    <string name="theme">Theme</string>
    <string name="apply">Apply</string>

    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <!-- Light, Dark, System -->
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="system_mode">System</string>
    <string name="noInternetMessage">Sorry, but you are not connected to the internet</string>
    <string name="fav">fav</string>
    <string name="en">en</string>
    <string name="alertMessage">Are you sure you want to delete this ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="ar">ar</string>
    <string name="system">sys_def</string>
    <string name="mPerH">m/h</string>
    <string name="mPerS">m/s</string>
    <!-- English, Arabic -->
    <string name="english_language">English</string>
    <string name="arabic_language">Arabic</string>

    <!-- GPS, Map -->
    <string name="gps">GPS</string>
    <string name="map">Map</string>

    <!-- Meter/Sec, Mile/Hour -->
    <string name="meter_per_second">Meter/Sec</string>
    <string name="mile_per_hour">Mile/Hour</string>
    <string name="today">Today</string>
    <string name="fiveFaysWeather">Weather of the Next Five Days</string>
    <string name="favLocations">Favourite Locations</string>
    <string name="pressure">Pressure</string>
    <string name="ultraViolet">Ultra Violet</string>
    <string name="cloud">Cloud</string>
    <string name="visibilty">Visibilty</string>
    <string name="humadity">Humadity</string>
    <string name="meterPerSecond">m/s</string>
    <string name="milePerHour">m/h</string>
    <string name="save">Save this location?</string>
    <string name="weatherDescription">The weather is fine no risks to face :)</string>
    <string name="weatherAlarm">Weather Alarm</string>
    <string name="savedalerts">Your Alerts</string>
    <string name="noAlerts">No Alerts</string>
    <string name="noFav">No Favourites</string>
    <string name="cancel">Cancel</string>
    <string name="saveD">Save</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="notifications">Notitfication</string>
    <string name="alarm">Alarm</string>
    <string name="datetime">Please set date and time</string>
</resources>