<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/mapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/favorite"
        android:title="@string/favourites" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/alert"
        android:title="@string/alert" />
    <item
        android:id="@+id/settingsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Item" />
</menu>